# yt-transcript-filter

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/agents/: api-developer.agent.md  be-developer.agent.md  documentation.agent.md  fe-developer.agent.md
docs/: DEVELOPMENT_LOG.md
src/: cli.py  fetcher.py  filter.py  llm_filter.py  service.py  storage.py  whisper_transcriber.py
src/Plans/DefaultView/: API_DEVELOPER.md  BE_DEVELOPER.md  DOCUMENTATION.md  FE_DEVELOPER.md  PLAN.md
src/Plans/FetchPanel/: API_DEVELOPER.md  BE_DEVELOPER.md  FE_DEVELOPER.md  PLAN.md
src/Plans/Progress/: API_DEVELOPER.md  BE_DEVELOPER.md  FE_DEVELOPER.md  PLAN.md
src/Plans/RemoveWhisper/: API_DEVELOPER.md  BE_DEVELOPER.md  FE_DEVELOPER.md  PLAN.md
src/Plans/SingleVideo/: API_DEVELOPER.md  BE_DEVELOPER.md  FE_DEVELOPER.md  PLAN.md
src/Plans/SkipCached/: API_DEVELOPER.md  BE_DEVELOPER.md  DOCUMENTATION.md  FE_DEVELOPER.md  PLAN.md
src/Plans/SkipReason/: API_DEVELOPER.md  BE_DEVELOPER.md  FE_DEVELOPER.md  PLAN.md
src/Plans/TopicFilter/: API_DEVELOPER.md  BE_DEVELOPER.md  FE_DEVELOPER.md  PLAN.md
src/Plans/TranscriptFormatting/: API_DEVELOPER.md  BE_DEVELOPER.md  DOCUMENTATION.md  FE_DEVELOPER.md  PLAN.md
src/Plans/TranscriptViewer/: API_DEVELOPER.md  BE_DEVELOPER.md  DOCUMENTATION.md  FE_DEVELOPER.md  PLAN.md
src/Plans/VideoLimit/: API_DEVELOPER.md  BE_DEVELOPER.md  FE_DEVELOPER.md  PLAN.md
src/Plans/Whisper/: API_DEVELOPER.md  BE_DEVELOPER.md  (+2 more)
web/: api.py
web/frontend/: README.md
(+15 files in other folders)
