[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript-filter"
version = "0.1.0"
description = "Scrape YouTube channel/playlist transcripts and filter videos by topic"
requires-python = ">=3.9"
dependencies = [
    "yt-dlp>=2024.0.0",
    "youtube-transcript-api>=0.6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
]

[project.scripts]
ytf = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
